--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,4 +34,6 @@ target 'SLL' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
 end
