Added react native chart kit to display charts Implemented dummy and not style MapScreen to display markers which will be SSL stores. Implemented dummy functionality  when user press on a marker a TouchableOpacity is shown displaying a chart which in the future will be the food available at that store.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,4 +36,6 @@ target 'SLL' do
 
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
 end
