--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-chart-kit": "^3.10.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "0.26.1",
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "~9.9.2",
     "react-native-unimodules": "~0.5.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
